--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
 		"dotenv": "^8.2.0",
 		"express": "^4.14.0",
 		"helmet": "^3.1.0",
-		"mocha": "^3.2.0"
+		"mocha": "^3.2.0",
+		"mongodb": "^6.9.0",
+		"mongoose": "^8.7.1",
+		"nodemon": "^3.1.7"
 	},
 	"repository": {
 		"type": "git",
